// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Button > should match the snapshot - disabled 1`] = `
<button
  aria-disabled="true"
  class="nhsuk-button nhsuk-button--disabled"
  data-testid="button"
  disabled=""
  type="submit"
>
  Click me
</button>
`;

exports[`Button > should match the snapshot - reverse 1`] = `
<button
  class="nhsuk-button nhsuk-button--reverse"
  data-testid="button"
  type="submit"
>
  Click me
</button>
`;

exports[`Button > should match the snapshot - secondary 1`] = `
<button
  class="nhsuk-button nhsuk-button--secondary"
  data-testid="button"
  type="submit"
>
  Click me
</button>
`;

exports[`Button > should match the snapshot 1`] = `
<button
  class="nhsuk-button"
  data-testid="button"
  type="submit"
>
  Click me
</button>
`;
